refactor: Add PrinterFactory to inject dependencies from outside ConsoleRunner